# fastapi-cloudrun

./: Dockerfile  README.md  pyproject.toml  requirements.txt
helloworld/: main.py
