[tool.poetry]
name = "fastapi-cloudrun"
version = "0.1.0"
description = ""
authors = ["eryeden <ery.eden@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_cloudrun"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
